all three services up